--- a/src/sass/layout/_disks.scss
+++ b/src/sass/layout/_disks.scss
@@ -2,19 +2,19 @@
 
 #disks {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 162px);
+    column-gap: 1.5rem;
+    row-gap: 1.1rem;
 
     #drives {
         grid-column: 1;
         grid-row: 1;
-        margin: 0rem 1rem 0.555rem 0rem;
     }
 
     #quarantines {
         grid-column: 1;
         grid-row: 2;
-        margin: 0.555rem 1rem 0rem 0rem;
     }
 
     #disk-view {
@@ -22,7 +22,6 @@
         flex-direction: column;
         grid-column: 2;
         grid-row: 1 / 3;
-        margin-left: 1rem;
 
         h1 {
             transition: opacity 250ms ease-in-out;
